--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <body>
     <div class="mytitle">
-        <h1>내 생애 최고의 영화들</h1>
+        <h1>내 생애 최고의 영화들!!</h1>
         <button>영화 기록하기</button>
     </div>
     <div class="mypost">
@@ -92,8 +92,8 @@
             <label for="floatingTextarea">코멘트</label>
         </div>
         <div class="mybtn">
-            <button type="button" class="btn btn-dark">Dark</button>
-            <button type="button" class="btn btn-link">Link</button>
+            <button type="button" class="btn btn-dark">기록하기</button>
+            <button type="button" class="btn btn-link">닫기</button>
         </div>
     </div>
     <div class="mycards">
